--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <div class="stat-label">Certifications</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">2</div>
+                        <div class="stat-number">3</div>
                         <div class="stat-label">Major Projects</div>
                     </div>
                 </div>
@@ -259,6 +259,51 @@
                                 <li>MySQL database integration</li>
                                 <li>Command-line interface</li>
                                 <li>Email notification system</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-image">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://github.com/Vinamr007/Bank_Management_System" target="_blank" rel="noopener noreferrer" class="project-link" title="View on GitHub">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                                <a href="https://github.com/Vinamr007/Bank_Management_System" target="_blank" rel="noopener noreferrer" class="project-link" title="GitHub Repository">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="project-placeholder">
+                            <i class="fas fa-university"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Bank Management System</h3>
+                        <p class="project-description">
+                            A robust terminal-based banking application featuring comprehensive account management, secure authentication, and transaction processing. 
+                            Built with Java for efficient banking operations with a focus on security and user experience.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">CLI</span>
+                            <span class="tech-tag">Authentication</span>
+                        </div>
+                        <div class="project-features">
+                            <h4>Key Features:</h4>
+                            <ul>
+                                <li>Create new bank accounts</li>
+                                <li>User login & authentication</li>
+                                <li>Deposit and withdraw money</li>
+                                <li>Check account balance</li>
+                                <li>View transaction history</li>
+                                <li>Update account details</li>
+                                <li>Delete/close account</li>
+                                <li>Secure input handling</li>
+                                <li>Menu-driven terminal interface</li>
                             </ul>
                         </div>
                     </div>
